@@ -23,6 +23,7 @@
 - fix symlink fail message in mount_bind.c.
 - fix cache readlock not taken on lookup.
 - pass map_source as function paramter where possible.
+- check for bind onto self in mount_bind.c.
 
 17/10/2013 autofs-5.0.8
 =======================
